<resources>
    <string name="app_name">Reminders</string>
    <string name="desc_add">Add Reminder</string>
    <string name="label_body">Reminder body&#8230;</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save_btn">Save reminder</string>
    <string name="cancel_bnt">Cancel</string>
    <string name="chip_showAll">All reminders</string>
    <string name="chip_showCompleted">Completed</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="save_edit_btn">Save Edits</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="show_notif">Get a notification</string>
    <string name="copy_clip">Copy to Clipboard</string>
    <string name="copy_copied">Copied to clipboard</string>
    <string name="snack_deleted">Reminder deleted</string>
    <string name="snack_undo">Undo</string>
    <string name="snack_deleteAll">Deleted all Reminders</string>
    <string name="label_title">Reminder title&#8230;</string>
    <string name="err_title_required">You must add a title to your reminder</string>
    <string name="err_title_too_long">The title cannot be longer than 128 characters</string>
    <string name="share_header">Reminder</string>
    <string name="chip_showToComplete">Not completed</string>
    <string name="notif_reminder_key">Reminder alerts</string>
    <string name="notif_reminder_desc">Notifications from reminders that you\'ve created</string>
    <string name="first_launch_splash">Welcome to Reminders!</string>
    <string name="first_launch_start">Let\'s start</string>
    <string name="whats_new">Whats new</string>
    <string name="back">Back</string>
    <string name="settings_label_default_filter">Default filtering method for reminders</string>
    <string name="chip_with_notificaiton">With notification</string>
    <string name="chip_wihtout_notificaiton">Without notification</string>
    <string name="settings_export_json">Export all reminders to JSON</string>
    <string name="default_filter" translatable="false">default_filter</string>
    <string name="pms_mode">Piedmontese mode</string>
    <string name="reopen_to_pms">You might have to restart the app to switch to Piedmontese</string>
    <string name="reopen_to_exit_pms">You might have to restart the app to restore previous configuration</string>
</resources>