<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar"
        app:singleLine="true"
        app:singleSelection="true" >

        <com.google.android.material.chip.Chip
            android:id="@+id/showall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_showAll" />

        <com.google.android.material.chip.Chip
            android:id="@+id/showcompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_showCompleted" />

        <com.google.android.material.chip.Chip
            android:id="@+id/showtocomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_showToComplete" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_add"
        app:backgroundTint="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chips" />

</androidx.constraintlayout.widget.ConstraintLayout>